@@ -1,11 +1,9 @@
-# $NetBSD: Makefile,v 1.11 2006/03/04 21:29:19 jlam Exp $
+# $NetBSD: Makefile,v 1.12 2006/11/05 17:49:34 joerg Exp $
 
-DISTNAME=	Algorithm-Diff-1.1901
-PKGNAME=	p5-${DISTNAME:S/1901/19.01/}
-PKGREVISION=	4
+DISTNAME=	Algorithm-Diff-1.1902
+PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Algorithm/}
-EXTRACT_SUFX=	.zip
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://search.cpan.org/dist/Algorithm-Diff/
