@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.2 2004/11/27 14:16:35 he Exp $
+$NetBSD: distinfo,v 1.3 2005/02/23 22:24:22 agc Exp $
 
-SHA1 (Algorithm-Diff-1.1901.zip) = 32800b5456419ec16f5b392fc55f4fcd81ae5fa6
-RMD160 (Algorithm-Diff-1.1901.zip) = d1036306faf1f2c37275ff4715cbbb313adc6101
-Size (Algorithm-Diff-1.1901.zip) = 38497 bytes
+SHA1 (Algorithm-Diff-1.1902.tar.gz) = f687d21fc0d42e6a065e465f326c97cd3f980639
+RMD160 (Algorithm-Diff-1.1902.tar.gz) = 3fc13f11788371a7a37bdd76e3c288e4d7606f43
+Size (Algorithm-Diff-1.1902.tar.gz) = 33529 bytes
