@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.1290 2007/06/09 23:21:11 abs Exp $
+$NetBSD: CHANGES-2007,v 1.1291 2007/06/09 23:24:08 abs Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -2502,3 +2502,4 @@ Changes to the packages collection and infrastructure in 2007:
 	Updated devel/p5-File-HomeDir to 0.65 [abs 2007-06-10]
 	Updated archivers/p5-Archive-Tar to 1.32 [abs 2007-06-10]
 	Updated databases/p5-DBI to 1.56 [abs 2007-06-10]
+	Updated devel/p5-Algorithm-Diff to 1.1902 [abs 2007-06-10]
